# cookiecutter-python-template

./: .gitignore  Makefile  README.md  cookiecutter.json  manage.ps1  pyproject.toml
tests/: conftest.py  test_cookiecutter.py  test_make_commands.py
utils/: logging.py
{{ cookiecutter.project_slug }}/: .gitignore  Makefile  README.md  main.py  manage.ps1  pyproject.toml
{{ cookiecutter.project_slug }}/tests/: test_simple.py
