[project]
name = "{{ cookiecutter.package_name }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.project_description }}"
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [ "loguru>=0.7.3", "pip>=25.2"]

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.uv]
[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"

[tool.hatch.build.targets.wheel]
packages = [ "{{ cookiecutter.package_name }}",]